@@ -26,6 +26,10 @@ Bugs fixed
 * #2394: Fix Sphinx crashes when html_last_updated_fmt is invalid
 * #2408: dummy builder not available in Makefile and make.bat
 
+Features added
+--------------
+
+* Tag signature descriptions with the ``descsignature`` CSS class.
 
 Release 1.4 (released Mar 28, 2016)
 ===================================
